# piholeLogAnalyser

./: CMakeLists.txt  CMakePresets.json  README.md  grokCustom.txt  grokString.txt  pihole.log.test2  test1  test3
Grok++/: CMakeLists.txt  README.md  grok-patterns  grok.cpp  grok.h  grokException.h  grokNamedSubExpression.h  grokResult.h
Grok++UnitTests/: CMakeLists.txt  groktest.cpp
LogAnalyserTest/: CMakeLists.txt  test.cpp
LogAnalyserUnitTests/: CMakeLists.txt  test.cpp
piholeLogAnalyser/: CMakeLists.txt  DNSQuery.h  dbInterface.h  dbPiholeLog.sql  piholeLogAnalyser.cpp  piholeLogAnalyserDefs.h
piholeLogAnalyser/TestData/: pihole.log.test.big2
